--- a/content/CMakeLists.txt
+++ b/content/CMakeLists.txt
@@ -7,7 +7,24 @@ qt6_add_qml_module(content
     VERSION 1.0
     QML_FILES
         App.qml
-        Screen01.ui.qml
+        CoreWindow.qml
+        CoreWindowForm.ui.qml
+        NavBar.qml
+        NavBarForm.ui.qml
+        IncomesAndExpenses.qml
+        IncomesAndExpensesForm.ui.qml
+        StartPage.qml
+        StartPageForm.ui.qml
+        Utils/DatePicker.qml
+        Utils/DatePickerForm.ui.qml
+        IncomesAndExpenses/Category.qml
+        IncomesAndExpenses/CategoryForm.ui.qml
+        IncomesAndExpenses/Dictionaries.qml
+        IncomesAndExpenses/DictionariesForm.ui.qml
+        IncomesAndExpenses/Member.qml
+        IncomesAndExpenses/MemberForm.ui.qml
+        IncomesAndExpenses/NewCategory.qml
+        IncomesAndExpenses/NewCategoryForm.ui.qml
     RESOURCES
         fonts/fonts.txt
 )
