Pobieranie słowników do okna notowania wydatków i przychodów
- Ładowanie słowników z bazy danych do pamięci aplikacji.
- Ładowanie słowników do comboboxów.
- Adaptacja CMake'ów do budowania aplikacji w QtCreator

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,19 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
 set(QML_IMPORT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/content)
 
-find_package(Qt6 COMPONENTS Gui Qml Quick QuickControls2)
-qt_add_executable(GLMoneyModernGUIApp src/main.cpp)
+set(HEADERS
+    src/DataStructs.hpp
+    src/databasecursor.hpp
+)
+set(SOURCES
+    src/databasecursor.cpp
+    src/DataStructs.cpp
+)
+
+
+
+find_package(Qt6 COMPONENTS Sql Gui Qml Quick QuickControls2)
+qt_add_executable(GLMoneyModernGUIApp src/main.cpp ${HEADERS} ${SOURCES})
 
 qt_add_resources(GLMoneyModernGUIApp "configuration"
     PREFIX "/"
@@ -15,8 +26,11 @@ qt_add_resources(GLMoneyModernGUIApp "configuration"
         qtquickcontrols2.conf
 )
 
+target_include_directories(GLMoneyModernGUIApp PRIVATE src)
+
 target_link_libraries(GLMoneyModernGUIApp PRIVATE
     Qt${QT_VERSION_MAJOR}::Core
+    Qt${QT_VERSION_MAJOR}::Sql
     Qt${QT_VERSION_MAJOR}::Gui
     Qt${QT_VERSION_MAJOR}::Quick
     Qt${QT_VERSION_MAJOR}::Qml
